# skrybe-sdk-py

./: README.md  pyproject.toml  setup.py  test_skrybe_sdk.py
.github/: copilot-instructions.md
skrybe_sdk/: __main__.py  exceptions.py  sdk.py
skrybe_sdk.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
