[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "skrybe-sdk-django"
version = "0.1.0"
description = "A Django-compatible SDK for Skrybe"
authors = [
    { name="Your Name", email="your@email.com" }
]
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
dependencies = [
    "requests>=2.25"
]
